--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Metodologías de Desarrollo de Software</title>
     <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
+    <button id="backToTop" class="back-to-top">&uarr;</button>
+
 </head>
 <body>
     <header>
